@@ -2,6 +2,7 @@ Change log next version
 -----------------------
 * Added methods "noFilters" and "noFiltersOfType" to RequestSpecification to allow for removal of filters. This is useful when specifying a default filter statically (e.g. a custom authentication filter) but you need to remove it in a Filter implementation in order to make requests without this filter.
 * Improved JsonPath to automatically convert e.g. ints to Strings if explicitly requested.
+* Fixed an issue with detailed cookie parsing that prevent the "secured" attribute to be parsed correctly.
 
 Change log 1.4.5 (2011-11-08)
 -----------------------------
